--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = third_party/mbedtls/mbedtls
 	url = https://github.com/ARMmbed/mbedtls
 	branch = mbedtls-2.16
+[submodule "third_party/libc-test/libc-test"]
+	path = third_party/libc-test/libc-test
+	url = git://repo.or.cz/libc-test
