Update prereqs and test for Ubuntu 20.04

--- a/prereqs/Makefile
+++ b/prereqs/Makefile
@@ -1,6 +1,15 @@
-DRIVER=sgx_linux_x64_driver_1.35.bin
+OS_NAME=$(shell lsb_release -c | sed 's/Codename\://g' | xargs)
+OS_VERSION=$(shell lsb_release -r | sed 's/Release\://g' | xargs)
 
+DRIVER=sgx_linux_x64_driver_1.35.bin
 DRIVER_URL=https://download.01.org/intel-sgx/sgx-dcap/1.7/linux/distro/ubuntu18.04-server
+
+PIP_INSTALL=python3-pip
+PIP=pip3
+ifeq ("$(OS_NAME)", "bionic")
+PIP_INSTALL=python-pip
+PIP=pip
+endif
 
 all:
 	test -e package-installed || $(MAKE) packages
@@ -10,23 +19,23 @@ wait_dpkg:
 	while sudo lsof /var/lib/dpkg/lock-frontend | grep dpkg; do sleep 3; done
 
 package_repo:
-	echo 'deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu bionic main' | sudo tee /etc/apt/sources.list.d/intel-sgx.list
+	echo "deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu $(OS_NAME) main" | sudo tee /etc/apt/sources.list.d/intel-sgx.list
 	wget -qO - https://download.01.org/intel-sgx/sgx_repo/ubuntu/intel-sgx-deb.key | sudo apt-key add -
-	echo "deb [arch=amd64] https://packages.microsoft.com/ubuntu/18.04/prod bionic main" | sudo tee /etc/apt/sources.list.d/msprod.list
+	echo "deb [arch=amd64] https://packages.microsoft.com/ubuntu/$(OS_VERSION)/prod $(OS_NAME) main" | sudo tee /etc/apt/sources.list.d/msprod.list
 	wget -qO - https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
 	sudo apt update
 
 packages: package_repo
 	$(MAKE) wait_dpkg
-	sudo apt install -y gdb dkms libssl-dev cryptsetup-bin curl libcurl4-openssl-dev clang-10 clang-format-10 pkg-config python3-pip python-pip
-	$(MAKE) wait_dpkg
-	sudo apt install -y libsgx-enclave-common libsgx-quote-ex  libsgx-dcap-ql libsgx-dcap-ql-dev az-dcap-client
-	pip install cmake && sudo ln -f -s $(HOME)/.local/bin/cmake /usr/bin/cmake
+	sudo apt install -y libsgx-enclave-common libsgx-quote-ex libsgx-dcap-ql libsgx-dcap-ql-dev az-dcap-client $(PIP_INSTALL)
+	$(PIP) install cmake && sudo ln -f -s $(HOME)/.local/bin/cmake /usr/bin/cmake
 	touch package-installed
 
 install_sgx_driver:
+ifeq ("$(OS_NAME)", "bionic")
 	wget $(DRIVER_URL)/$(DRIVER)
 	sudo bash ./$(DRIVER)
+endif
 
 clean:
 	rm -f $(DRIVER) package-installed
