--- a/solutions/tensorflow_lite/Makefile
+++ b/solutions/tensorflow_lite/Makefile
@@ -12,7 +12,7 @@ rootfs: appdir
 	$(MYST) mkext2 appdir ext2rootfs
 
 run:
-	$(MYST_EXEC) ext2rootfs /usr/local/bin/python3 --app-config-path config.json
+	$(RUNTEST) $(MYST_EXEC) ext2rootfs /usr/local/bin/python3 --app-config-path config.json
 
 clean:
 	rm -rf ext2rootfs appdir
