--- a/solutions/confidential_ml/Makefile
+++ b/solutions/confidential_ml/Makefile
@@ -21,7 +21,7 @@ $(PACKAGE): appdir package.pem
 	$(MYST) package-sgx --roothash=roothash package.pem config.json
 
 # running both service and client in one recipe
-run:
+_run:
 	./kill.sh $(PACKAGE) $(APP_PATH)
 	@echo "\n------Starting Pytorch Inference Service(package mode)------\n"
 	$(PACKAGE) --rootfs=rootfs &
@@ -43,6 +43,9 @@ run:
 	@sleep $(SHUTDOWN_WAIT)
 	@echo "\n------Terminating Pytorch Inference Service------\n"
 	./kill.sh $(PACKAGE) $(APP_PATH)
+	
+run:
+	$(RUNTEST) make -C $(CURDIR) _run
 
 package.pem:
 	./gen_pkey.sh package.pem
