--- a/solutions/dotnet/Makefile
+++ b/solutions/dotnet/Makefile
@@ -14,9 +14,12 @@ run-unsigned:
 	$(MYST) mkcpio appdir rootfs
 	$(MYST_EXEC) $(OPTS) --memory-size=1024m --thread-stack-size=1m rootfs /app/HelloWorld
 
-run: appdir private.pem
+_run: appdir private.pem
 	timeout 45m $(MYST) package appdir private.pem config.json
 	myst/bin/$(APPNAME) $(OPTS)
+	
+run:
+	$(RUNTEST) make -C $(CURDIR) _run
 	
 gdb: appdir private.pem
 	$(MYST) package appdir private.pem config.json
