--- a/solutions/mhsm_ssr/Makefile
+++ b/solutions/mhsm_ssr/Makefile
@@ -13,10 +13,13 @@ appdir:
 $(PKEY_FILE):
 	./gen_pkey.sh $(PKEY_FILE)
 
-run: appdir $(PKEY_FILE)
+_run: appdir $(PKEY_FILE)
 	$(MYST) package appdir p.pem config.json
 	rm -rf $(PKEY_FILE)
 	./myst/bin/$(APPNAME)
+	
+run:
+	$(RUNTEST) make -C $(CURDIR) _run
 
 gdb: appdir $(PKEY_FILE)
 	$(MYST) package appdir p.pem config.json
