--- a/solutions/nodejs/Makefile
+++ b/solutions/nodejs/Makefile
@@ -19,12 +19,15 @@ appdir:
 
 TIMEOUT=60s
 
-run:
+_run:
 	$(MYST_EXEC) $(OPTS) rootfs /usr/local/bin/node /app/app.js & echo $$! > server.pid
-	./wait.sh
+	timeout $(TIMEOUT) ./wait.sh
 	curl 127.0.0.1:3000 >> client.output
 	test -f server.pid && kill -9 `cat server.pid` && rm server.pid || true
 	grep -q "Hello World" client.output
+
+run:
+	$(RUNTEST) make -C $(CURDIR) _run
 
 clean:
 	test -f server.pid && kill -9 `cat server.pid` && rm server.pid || true
