disable go sample on SGX1 platform
Signed-off-by: Paul Allen <paul.c.allen@microsoft.com>

--- a/samples/go/Makefile
+++ b/samples/go/Makefile
@@ -16,8 +16,15 @@ OPTS =
 OPTS += --thread-stack-size=1m
 OPTS += --memory-size=1g
 
-run: rootfs
+SGX2_PRESENT := $(shell $(BUILDDIR)/openenclave/bin/oesgx | grep -c SGX2)
+
+__run: rootfs
 	$(MYST_EXEC) $(OPTS) rootfs /app/hello
+
+run:
+ifeq ($(SGX2_PRESENT),1)
+	make __run
+endif
 
 clean:
 	rm -rf appdir rootfs .iid mntdir
